// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerseCheck component: Integrated View test - edit mode 1`] = `
<div
  className="verse-check"
>
  <div
    className="verse-check-flex"
  >
    <div
      className="verse-check-card"
    >
      <div
        className="title-bar"
      >
        <span>
          edit_verse
        </span>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <span
            className="glyphicon glyphicon-ok"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_selections_found"
          />
          <span
            className="glyphicon glyphicon-pencil"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_verse_edits_found"
          />
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_comments_found"
          />
          <span
            className="glyphicon glyphicon-bookmark"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.not_bookmarked"
          />
        </div>
      </div>
      <div
        className="check-area"
      >
        <div
          style={
            Object {
              "WebkitUserSelect": "none",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <div
            className="verse-title"
          >
            
            <div
              className="pane"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <span
                className="verse-title-title"
                style={Object {}}
              >
                Fwe (FWE)
              </span>
              <span
                className="verse-title-subtitle"
                style={Object {}}
              >
                Titus 2:5
              </span>
            </div>
            <span
              className="glyphicon glyphicon-option-vertical"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "18px",
                  "padding": 0,
                }
              }
            />
          </div>
          <div
            className="ltr-content"
            style={Object {}}
          >
            <div
              style={
                Object {
                  "color": "var(--text-color-light)",
                  "userSelect": "none",
                }
              }
            >
              <span
                className=""
              >
                Kono ewe, oambe ziyenderera ne ntaero zisepahara. 
              </span>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "borderLeft": "1px solid var(--border-color)",
              "display": "flex",
              "flex": 1,
              "justifyContent": "center",
              "overflowY": "auto",
            }
          }
        >
          <div
            className="edit-area"
          >
            <div
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              <span
                className="glyphicon glyphicon-pencil"
                style={
                  Object {
                    "marginRight": "5px",
                  }
                }
              />
              edit_verse
            </div>
            <div
              className="form-group"
              style={
                Object {
                  "display": "flex",
                  "flex": "auto",
                  "flexDirection": "column",
                  "marginBottom": "5px",
                }
              }
            >
              <div
                style={
                  Object {
                    "fontSize": "100%",
                  }
                }
              >
                 
                <textarea
                  autoFocus={true}
                  className="default-text form-control"
                  defaultValue="Kono ewe, oambe ziyenderera ne ntaero zisepahara.
\\\\s5
"
                  id="formControlsTextarea"
                  onFocus={[Function]}
                  style={
                    Object {
                      "direction": "ltr",
                      "flex": "auto",
                      "minHeight": "110px",
                    }
                  }
                  type="text"
                />
              </div>
              <div
                style={
                  Object {
                    "flex": "0 0 65px",
                    "fontSize": "0.9em",
                    "marginTop": "5px",
                  }
                }
              >
                first_make_change
                <br />
                <div
                  style={
                    Object {
                      "display": "flex",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "column",
                        "margin": "0px 0px 0px 15px",
                      }
                    }
                  >
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        spelling
                      </span>
                    </label>
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        punctuation
                      </span>
                    </label>
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        word_choice
                      </span>
                    </label>
                  </div>
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "column",
                        "margin": "0px 0px 0px 15px",
                      }
                    }
                  >
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        meaning
                      </span>
                    </label>
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        grammar
                      </span>
                    </label>
                    <label
                      className="MuiFormControlLabel-root EditVerseArea-formControlLabelRoot-16 Mui-disabled"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root EditVerseArea-checkBox-18 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-9 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            checked={false}
                            className="PrivateSwitchBase-input-10"
                            data-indeterminate={false}
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <svg
                            aria-hidden={true}
                            className="MuiSvgIcon-root"
                            focusable="false"
                            style={
                              Object {
                                "fontSize": "24px",
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        className="MuiTypography-root MuiFormControlLabel-label EditVerseArea-formControlLabel-17 Mui-disabled MuiTypography-body1"
                      >
                        other
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="actions-area"
      >
        <span>
          <button
            className="btn-second"
          >
            cancel
          </button>
        </span>
        <span>
          <button
            className="btn-prime"
            disabled={true}
          >
            <span
              className="glyphicon glyphicon-ok"
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            />
            save
          </button>
        </span>
      </div>
    </div>
    <div />
  </div>
  <div />
</div>
`;

exports[`VerseCheck component: Integrated View test 1`] = `
<div
  className="verse-check"
>
  <div
    className="verse-check-flex"
  >
    <div
      className="verse-check-card"
    >
      <div
        className="title-bar"
      >
        <span>
          select
        </span>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <span
            className="glyphicon glyphicon-ok"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_selections_found"
          />
          <span
            className="glyphicon glyphicon-pencil"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_verse_edits_found"
          />
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_comments_found"
          />
          <span
            className="glyphicon glyphicon-bookmark"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.not_bookmarked"
          />
        </div>
      </div>
      <div
        className="check-area"
      >
        <div
          className="selection-area-root"
        >
          <div
            className="verse-title"
          >
            
            <div
              className="pane"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <span
                className="verse-title-title"
                style={Object {}}
              >
                Fwe (FWE)
              </span>
              <span
                className="verse-title-subtitle"
                style={Object {}}
              >
                Titus 2:5
              </span>
            </div>
            <span
              className="glyphicon glyphicon-option-vertical"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "18px",
                  "padding": 0,
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "overflow": "auto",
              }
            }
          >
            <div
              className="ltr-content"
              style={Object {}}
            >
              <div
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
              >
                <span
                  className=""
                >
                  Kono ewe, oambe ziyenderera ne ntaero zisepahara. 
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "borderLeft": "1px solid var(--border-color)",
              "display": "flex",
              "flex": 1,
              "justifyContent": "center",
              "overflowY": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitUserSelect": "none",
                "alignItems": "center",
                "display": "flex",
                "flex": "1",
                "justifyContent": "center",
                "overflow": "auto",
              }
            }
          >
            <div
              className="instructions-area"
            >
              <span>
                please_select
              </span>
              <br />
              <span>
                <strong
                  style={
                    Object {
                      "color": "var(--accent-color)",
                    }
                  }
                >
                  undefined
                </strong>
              </span>
              <br />
            </div>
          </div>
        </div>
      </div>
      <div
        className="selection-actions-area"
      >
        <div
          className="flex-row"
        >
          <label
            className="MuiFormControlLabel-root ActionsArea-formControl-1"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root ActionsArea-checkBoxRoot-3 MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  className="PrivateSwitchBase-input-10"
                  data-indeterminate={false}
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                  value="nothingToSelect"
                />
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "fontSize": "24px",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </span>
            <span
              className="MuiTypography-root MuiFormControlLabel-label ActionsArea-label-2 MuiTypography-body1"
            >
              no_selection_needed
            </span>
          </label>
          <div
            data-class="selection-tooltip"
            data-delay-hide="100"
            data-effect="float"
            data-place="top"
            data-tip="nothing_to_select_description"
            data-type="dark"
            style={
              Object {
                "fontSize": "0.8em",
                "verticalAlign": "super",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root ActionsArea-icon-5"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <div
              className="__react_component_tooltip place-top type-dark"
              data-id="tooltip"
            />
          </div>
        </div>
        <div
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginLeft": "0px",
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              cancel
            </button>
          </span>
          <span
            aria-label="clear_selection"
            className="hint--top hint--medium"
          >
            <button
              className="btn-second"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-erase"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              clear_selection
            </button>
          </span>
          <span>
            <button
              className="btn-prime"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-ok"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              save
            </button>
          </span>
        </div>
      </div>
    </div>
    <div />
  </div>
  <div />
</div>
`;

exports[`VerseCheck component: Integrated View test with default and invalidated 1`] = `
<div
  className="verse-check"
>
  <div
    className="verse-check-flex"
  >
    <div
      className="verse-check-card"
    >
      <div
        className="title-bar"
      >
        <span>
          step2_check
        </span>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <span
            className="glyphicon glyphicon-ok"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_selections_found"
          />
          <span
            className="glyphicon glyphicon-pencil"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_verse_edits_found"
          />
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_comments_found"
          />
          <span
            className="glyphicon glyphicon-bookmark"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.not_bookmarked"
          />
        </div>
      </div>
      <div
        className="check-area"
      >
        <div
          style={
            Object {
              "WebkitUserSelect": "none",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <div
            className="verse-title"
          >
            
            <div
              className="pane"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <span
                className="verse-title-title"
                style={Object {}}
              >
                Fwe (FWE)
              </span>
              <span
                className="verse-title-subtitle"
                style={Object {}}
              >
                Titus 2:5
              </span>
            </div>
            <span
              className="glyphicon glyphicon-option-vertical"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "18px",
                  "padding": 0,
                }
              }
            />
          </div>
          <div
            className="ltr-content"
            style={Object {}}
          >
            <div
              style={
                Object {
                  "color": "var(--text-color-light)",
                  "userSelect": "none",
                }
              }
            >
              <span
                className=""
              >
                Kono ewe, oambe ziyenderera ne ntaero zisepahara. 
              </span>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "borderLeft": "1px solid var(--border-color)",
              "display": "flex",
              "flex": 1,
              "justifyContent": "center",
              "overflowY": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitUserSelect": "none",
                "alignItems": "center",
                "display": "flex",
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <div
              className="instructions-area"
            >
              <span>
                no_selection
              </span>
              <br />
            </div>
          </div>
        </div>
      </div>
      <div
        className="actions-area"
      >
        <label
          className="MuiFormControlLabel-root"
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <span
            className="MuiSwitch-root"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiSwitch-switchBase Bookmark-colorSwitchBase-12 MuiSwitch-colorPrimary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  checked={false}
                  className="PrivateSwitchBase-input-10 MuiSwitch-input"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                  value="bookmark"
                />
                <span
                  className="MuiSwitch-thumb"
                />
              </span>
            </span>
            <span
              className="MuiSwitch-track Bookmark-colorTrack-13"
            />
          </span>
          <span
            className="MuiTypography-root MuiFormControlLabel-label Bookmark-label-15 MuiTypography-body1"
          >
            bookmark
          </span>
        </label>
        <div
          style={
            Object {
              "display": "flex",
              "marginLeft": "auto",
            }
          }
        >
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-ok"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              select
            </button>
          </span>
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-pencil"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              edit_verse
            </button>
          </span>
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-comment"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              comment
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      className="save-area"
    >
      <span>
        <button
          className="btn-second"
          onClick={[Function]}
          style={
            Object {
              "overflow": "hidden",
              "paddingRight": "0px",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="glyphicon glyphicon-share-alt"
            style={
              Object {
                "marginRight": "10px",
                "transform": "scaleX(-1)",
              }
            }
          />
          save_previous
        </button>
      </span>
      <span>
        <button
          className="btn-prime"
          onClick={[Function]}
          style={
            Object {
              "overflow": "hidden",
              "paddingRight": "0px",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          save_continue
          <span
            className="glyphicon glyphicon-share-alt"
            style={
              Object {
                "marginLeft": "10px",
              }
            }
          />
        </button>
      </span>
    </div>
  </div>
  <div />
</div>
`;

exports[`VerseCheck component: Integrated View test with invalidated 1`] = `
<div
  className="verse-check"
>
  <div
    className="verse-check-flex"
  >
    <div
      className="verse-check-card"
    >
      <div
        className="title-bar"
      >
        <span>
          select
        </span>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <span
            className="glyphicon glyphicon-ok"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_selections_found"
          />
          <span
            className="glyphicon glyphicon-pencil"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_verse_edits_found"
          />
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_comments_found"
          />
          <span
            className="glyphicon glyphicon-bookmark"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.not_bookmarked"
          />
        </div>
      </div>
      <div
        className="check-area"
      >
        <div
          className="selection-area-root"
        >
          <div
            className="verse-title"
          >
            
            <div
              className="pane"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <span
                className="verse-title-title"
                style={Object {}}
              >
                Fwe (FWE)
              </span>
              <span
                className="verse-title-subtitle"
                style={Object {}}
              >
                Titus 2:5
              </span>
            </div>
            <span
              className="glyphicon glyphicon-option-vertical"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "18px",
                  "padding": 0,
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "overflow": "auto",
              }
            }
          >
            <div
              className="ltr-content"
              style={Object {}}
            >
              <div
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
              >
                <span
                  className=""
                >
                  Kono ewe, oambe ziyenderera ne ntaero zisepahara. 
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "borderLeft": "1px solid var(--border-color)",
              "display": "flex",
              "flex": 1,
              "justifyContent": "center",
              "overflowY": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitUserSelect": "none",
                "alignItems": "center",
                "display": "flex",
                "flex": "1",
                "justifyContent": "center",
                "overflow": "auto",
              }
            }
          >
            <div
              className="instructions-area"
            >
              <span>
                please_select
              </span>
              <br />
              <span>
                <strong
                  style={
                    Object {
                      "color": "var(--accent-color)",
                    }
                  }
                >
                  undefined
                </strong>
              </span>
              <br />
            </div>
          </div>
        </div>
      </div>
      <div
        className="selection-actions-area"
      >
        <div
          className="flex-row"
        >
          <label
            className="MuiFormControlLabel-root ActionsArea-formControl-1"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root ActionsArea-checkBoxRoot-3 MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  className="PrivateSwitchBase-input-10"
                  data-indeterminate={false}
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                  value="nothingToSelect"
                />
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "fontSize": "24px",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </span>
            <span
              className="MuiTypography-root MuiFormControlLabel-label ActionsArea-label-2 MuiTypography-body1"
            >
              no_selection_needed
            </span>
          </label>
          <div
            data-class="selection-tooltip"
            data-delay-hide="100"
            data-effect="float"
            data-place="top"
            data-tip="nothing_to_select_description"
            data-type="dark"
            style={
              Object {
                "fontSize": "0.8em",
                "verticalAlign": "super",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root ActionsArea-icon-5"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <div
              className="__react_component_tooltip place-top type-dark"
              data-id="tooltip"
            />
          </div>
        </div>
        <div
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginLeft": "0px",
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              cancel
            </button>
          </span>
          <span
            aria-label="clear_selection"
            className="hint--top hint--medium"
          >
            <button
              className="btn-second"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-erase"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              clear_selection
            </button>
          </span>
          <span>
            <button
              className="btn-prime"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-ok"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              save
            </button>
          </span>
        </div>
      </div>
    </div>
    <div />
  </div>
  <div />
</div>
`;

exports[`VerseCheck component: Integrated View test with verseEdit 1`] = `
<div
  className="verse-check"
>
  <div
    className="verse-check-flex"
  >
    <div
      className="verse-check-card"
    >
      <div
        className="title-bar"
      >
        <span>
          select
        </span>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <span
            className="glyphicon glyphicon-ok"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_selections_found"
          />
          <span
            className="glyphicon glyphicon-pencil"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_verse_edits_found"
          />
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.no_comments_found"
          />
          <span
            className="glyphicon glyphicon-bookmark"
            style={
              Object {
                "color": "var(--reverse-color)",
                "margin": "0px 20px",
                "opacity": 0.2,
              }
            }
            title="icons.not_bookmarked"
          />
        </div>
      </div>
      <div
        className="check-area"
      >
        <div
          className="selection-area-root"
        >
          <div
            className="verse-title"
          >
            
            <div
              className="pane"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <span
                className="verse-title-title"
                style={Object {}}
              >
                Fwe (FWE)
              </span>
              <span
                className="verse-title-subtitle"
                style={Object {}}
              >
                Titus 2:5
              </span>
            </div>
            <span
              className="glyphicon glyphicon-option-vertical"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "18px",
                  "padding": 0,
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "overflow": "auto",
              }
            }
          >
            <div
              className="ltr-content"
              style={Object {}}
            >
              <div
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
              >
                <span
                  className=""
                >
                  Kono ewe, oambe ziyenderera ne ntaero zisepahara. 
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "borderLeft": "1px solid var(--border-color)",
              "display": "flex",
              "flex": 1,
              "justifyContent": "center",
              "overflowY": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitUserSelect": "none",
                "alignItems": "center",
                "display": "flex",
                "flex": "1",
                "justifyContent": "center",
                "overflow": "auto",
              }
            }
          >
            <div
              className="instructions-area"
            >
              <span>
                please_select
              </span>
              <br />
              <span>
                <strong
                  style={
                    Object {
                      "color": "var(--accent-color)",
                    }
                  }
                >
                  undefined
                </strong>
              </span>
              <br />
            </div>
          </div>
        </div>
      </div>
      <div
        className="selection-actions-area"
      >
        <div
          className="flex-row"
        >
          <label
            className="MuiFormControlLabel-root ActionsArea-formControl-1"
          >
            <span
              aria-disabled={false}
              className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiCheckbox-root ActionsArea-checkBoxRoot-3 MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label"
              >
                <input
                  className="PrivateSwitchBase-input-10"
                  data-indeterminate={false}
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                  value="nothingToSelect"
                />
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "fontSize": "24px",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </span>
            <span
              className="MuiTypography-root MuiFormControlLabel-label ActionsArea-label-2 MuiTypography-body1"
            >
              no_selection_needed
            </span>
          </label>
          <div
            data-class="selection-tooltip"
            data-delay-hide="100"
            data-effect="float"
            data-place="top"
            data-tip="nothing_to_select_description"
            data-type="dark"
            style={
              Object {
                "fontSize": "0.8em",
                "verticalAlign": "super",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root ActionsArea-icon-5"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <div
              className="__react_component_tooltip place-top type-dark"
              data-id="tooltip"
            />
          </div>
        </div>
        <div
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span>
            <button
              className="btn-second"
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginLeft": "0px",
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              cancel
            </button>
          </span>
          <span
            aria-label="clear_selection"
            className="hint--top hint--medium"
          >
            <button
              className="btn-second"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-erase"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              clear_selection
            </button>
          </span>
          <span>
            <button
              className="btn-prime"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                  "overflow": "hidden",
                  "paddingRight": "0px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "140px",
                }
              }
            >
              <span
                className="glyphicon glyphicon-ok"
                style={
                  Object {
                    "marginRight": "10px",
                  }
                }
              />
              save
            </button>
          </span>
        </div>
      </div>
    </div>
    <div />
  </div>
  <div />
</div>
`;
